<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    tools:context=".ItemDetailHostActivity"
    tools:ignore="MergeRootFrame">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/yellow_200"
            app:collapsedTitleTextColor="@color/black"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextColor="@color/black"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/coin_image"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:placeholderImage="@drawable/money"
                app:placeholderImageScaleType="centerInside"
                fresco:actualImageScaleType="centerInside" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/item_detail_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingVertical="@dimen/text_margin_lg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/text_margin_lg">

                <TextView
                    android:id="@+id/item_price"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placholder_price"
                    android:textAlignment="textStart"
                    android:textIsSelectable="true"
                    android:textSize="54sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/item_price_note"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@string/up_in_the_last_24_hours"
                    android:textIsSelectable="true"
                    android:textSize="14sp" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/text_margin_lg"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <LinearLayout
                        style="@style/CoinStatRow"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1">

                        <TextView
                            style="@style/CoinStatLabel"
                            android:text="@string/market_cap" />

                        <TextView
                            android:id="@+id/market_cap"
                            style="@style/CoinStat"
                            android:text="@string/placeholder_mc" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/CoinStatRow"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1">

                        <TextView
                            style="@style/CoinStatLabel"
                            android:text="@string/rank" />

                        <TextView
                            android:id="@+id/rank"
                            style="@style/CoinStat"
                            android:text="@string/placeholder_rank" />
                    </LinearLayout>


                    <LinearLayout
                        style="@style/CoinStatRow"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_marginTop="14dp">

                        <TextView
                            style="@style/CoinStatLabel"
                            android:text="@string/circ_supply" />

                        <TextView
                            android:id="@+id/circ_supply"
                            style="@style/CoinStat"
                            android:text="@string/placholder_supply" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/CoinStatRow"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_marginTop="14dp">

                        <TextView
                            style="@style/CoinStatLabel"
                            android:text="@string/total_supply" />

                        <TextView
                            android:id="@+id/total_supply"
                            style="@style/CoinStat"
                            android:text="@string/placholder_max_supply" />
                    </LinearLayout>


                    <LinearLayout
                        style="@style/CoinStatRow"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_marginTop="14dp">

                        <TextView
                            style="@style/CoinStatLabel"
                            android:text="@string/max_supply" />

                        <TextView
                            android:id="@+id/max_supply"
                            style="@style/CoinStat"
                            android:text="@string/placholder_max_supply" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/CoinStatRow"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_marginTop="14dp">

                        <TextView
                            style="@style/CoinStatLabel"
                            android:text="@string/all_time_high" />

                        <TextView
                            android:id="@+id/ath"
                            style="@style/CoinStat"
                            android:text="@string/placeholder_ath" />
                    </LinearLayout>
                </GridLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/text_margin_lg"
                android:layout_marginTop="32dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        style="@style/CoinStatLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/convert" />

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:columnCount="2"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_marginEnd="8dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/input_coin"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/bitcorn"
                                android:inputType="numberDecimal" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_marginStart="8dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/input_usd"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:editable="false"
                                android:hint="@string/dollars"
                                android:inputType="numberDecimal"
                                android:text="1" />
                        </LinearLayout>
                    </GridLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/button_notify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/text_margin_lg"
                android:layout_marginTop="32dp"
                android:background="@color/yellow_700"
                android:paddingVertical="16dp"
                android:text="@string/notify_me_on_price_changes" />
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|start"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        app:layout_anchor="@+id/item_detail_scroll_view"
        app:layout_anchorGravity="top|end"
        app:srcCompat="@android:drawable/ic_menu_search" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>