<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    app:cardElevation="2dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="4dp">

        <TextView
            android:id="@+id/coin_card_ranking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/placeholder_rank"
            android:textAppearance="?attr/textAppearanceListItem" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/coin_card_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            app:placeholderImage="@drawable/bitcorn"
            app:placeholderImageScaleType="centerInside"
            fresco:actualImageScaleType="centerInside" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/coin_card_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bitcorn"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/coin_card_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placholder_percent"
                android:textSize="14dp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/coin_card_symbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="end"
            android:text="@string/btr"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
